[gd_scene load_steps=15 format=2]

[ext_resource path="res://res/normal_mode_screen.gd" type="Script" id=1]
[ext_resource path="res://res/popups/ModesPopUp.tscn" type="PackedScene" id=2]
[ext_resource path="res://res/popups/DiceSelectedPopup.tscn" type="PackedScene" id=3]
[ext_resource path="res://res/Assets/Buttons/Reiniciar.png" type="Texture" id=4]
[ext_resource path="res://res/Texture.tscn" type="PackedScene" id=5]
[ext_resource path="res://res/Assets/Dices/Dados finalizados-01.png" type="Texture" id=6]
[ext_resource path="res://res/Assets/Buttons/Menu.png" type="Texture" id=7]
[ext_resource path="res://res/Assets/Titulo.png" type="Texture" id=8]
[ext_resource path="res://res/popups/NormalModeGuidePopup.tscn" type="PackedScene" id=9]
[ext_resource path="res://res/popups/ContinuePopup.tscn" type="PackedScene" id=10]
[ext_resource path="res://res/popups/continue_popup_normal_mode.gd" type="Script" id=11]
[ext_resource path="res://res/buttons/MenuButton.tscn" type="PackedScene" id=12]
[ext_resource path="res://res/Assets/Sounds/Clique bot√µes.wav" type="AudioStream" id=13]
[ext_resource path="res://res/fade_in/FadeIn.tscn" type="PackedScene" id=14]

[node name="DiceScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_horizontal_guides_": [ 106.5 ],
"_edit_use_anchors_": false
}

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 13 )

[node name="Texture" parent="." instance=ExtResource( 5 )]
margin_right = 5001.0
margin_bottom = 2813.0

[node name="Title" type="TextureRect" parent="."]
margin_left = 596.0
margin_top = 30.0
margin_right = 1288.0
margin_bottom = 186.0
texture = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Restart" parent="." instance=ExtResource( 12 )]
margin_left = 1648.0
margin_top = 70.0
margin_right = 1718.0
margin_bottom = 140.0
texture_normal = ExtResource( 4 )

[node name="Exit" parent="." instance=ExtResource( 12 )]
margin_left = 1743.0
margin_top = 80.0
margin_right = 1833.0
margin_bottom = 134.0
texture_normal = ExtResource( 7 )

[node name="Dices" type="HBoxContainer" parent="."]
margin_left = 534.0
margin_top = 218.0
margin_right = 1346.0
margin_bottom = 1033.0
custom_constants/separation = 18
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Dices"]
margin_right = 812.0
margin_bottom = 815.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 28

[node name="Row0" type="HBoxContainer" parent="Dices/VBoxContainer"]
margin_right = 812.0
margin_bottom = 253.0
size_flags_vertical = 3
custom_constants/separation = 28

[node name="Column0" type="CenterContainer" parent="Dices/VBoxContainer/Row0"]
margin_right = 252.0
margin_bottom = 253.0
size_flags_horizontal = 3

[node name="Button" type="Button" parent="Dices/VBoxContainer/Row0/Column0"]
margin_right = 252.0
margin_bottom = 253.0
rect_min_size = Vector2( 252, 253 )
focus_mode = 0
size_flags_horizontal = 3
flat = true

[node name="icon" type="Sprite" parent="Dices/VBoxContainer/Row0/Column0/Button"]
position = Vector2( 126, 126.5 )
scale = Vector2( 0.333, 0.333 )
texture = ExtResource( 6 )

[node name="Column1" type="CenterContainer" parent="Dices/VBoxContainer/Row0"]
margin_left = 280.0
margin_right = 532.0
margin_bottom = 253.0
size_flags_horizontal = 3

[node name="Button" type="Button" parent="Dices/VBoxContainer/Row0/Column1"]
margin_right = 252.0
margin_bottom = 253.0
rect_min_size = Vector2( 252, 253 )
focus_mode = 0
size_flags_horizontal = 3
flat = true

[node name="icon" type="Sprite" parent="Dices/VBoxContainer/Row0/Column1/Button"]
position = Vector2( 126, 126.5 )
scale = Vector2( 0.333, 0.333 )
texture = ExtResource( 6 )

[node name="Column2" type="CenterContainer" parent="Dices/VBoxContainer/Row0"]
margin_left = 560.0
margin_right = 812.0
margin_bottom = 253.0
size_flags_horizontal = 3

[node name="Button" type="Button" parent="Dices/VBoxContainer/Row0/Column2"]
margin_right = 252.0
margin_bottom = 253.0
rect_min_size = Vector2( 252, 253 )
focus_mode = 0
size_flags_horizontal = 3
flat = true

[node name="icon" type="Sprite" parent="Dices/VBoxContainer/Row0/Column2/Button"]
position = Vector2( 126, 126.5 )
scale = Vector2( 0.333, 0.333 )
texture = ExtResource( 6 )

[node name="Row1" type="HBoxContainer" parent="Dices/VBoxContainer"]
margin_top = 281.0
margin_right = 812.0
margin_bottom = 534.0
size_flags_vertical = 3
custom_constants/separation = 28

[node name="Column0" type="CenterContainer" parent="Dices/VBoxContainer/Row1"]
margin_right = 252.0
margin_bottom = 253.0
size_flags_horizontal = 3

[node name="Button" type="Button" parent="Dices/VBoxContainer/Row1/Column0"]
margin_right = 252.0
margin_bottom = 253.0
rect_min_size = Vector2( 252, 253 )
focus_mode = 0
size_flags_horizontal = 3
flat = true

[node name="icon" type="Sprite" parent="Dices/VBoxContainer/Row1/Column0/Button"]
position = Vector2( 126, 126.5 )
scale = Vector2( 0.333, 0.333 )
texture = ExtResource( 6 )

[node name="Column1" type="CenterContainer" parent="Dices/VBoxContainer/Row1"]
margin_left = 280.0
margin_right = 532.0
margin_bottom = 253.0
size_flags_horizontal = 3

[node name="Button" type="Button" parent="Dices/VBoxContainer/Row1/Column1"]
margin_right = 252.0
margin_bottom = 253.0
rect_min_size = Vector2( 252, 253 )
focus_mode = 0
size_flags_horizontal = 3
flat = true

[node name="icon" type="Sprite" parent="Dices/VBoxContainer/Row1/Column1/Button"]
position = Vector2( 126, 126.5 )
scale = Vector2( 0.333, 0.333 )
texture = ExtResource( 6 )

[node name="Column2" type="CenterContainer" parent="Dices/VBoxContainer/Row1"]
margin_left = 560.0
margin_right = 812.0
margin_bottom = 253.0
size_flags_horizontal = 3

[node name="Button" type="Button" parent="Dices/VBoxContainer/Row1/Column2"]
margin_right = 252.0
margin_bottom = 253.0
rect_min_size = Vector2( 252, 253 )
focus_mode = 0
size_flags_horizontal = 3
flat = true

[node name="icon" type="Sprite" parent="Dices/VBoxContainer/Row1/Column2/Button"]
position = Vector2( 126, 126.5 )
scale = Vector2( 0.333, 0.333 )
texture = ExtResource( 6 )

[node name="Row2" type="HBoxContainer" parent="Dices/VBoxContainer"]
margin_top = 562.0
margin_right = 812.0
margin_bottom = 815.0
size_flags_vertical = 3
custom_constants/separation = 28

[node name="Column0" type="CenterContainer" parent="Dices/VBoxContainer/Row2"]
margin_right = 252.0
margin_bottom = 253.0
size_flags_horizontal = 3

[node name="Button" type="Button" parent="Dices/VBoxContainer/Row2/Column0"]
margin_right = 252.0
margin_bottom = 253.0
rect_min_size = Vector2( 252, 253 )
focus_mode = 0
size_flags_horizontal = 3
flat = true

[node name="icon" type="Sprite" parent="Dices/VBoxContainer/Row2/Column0/Button"]
position = Vector2( 126, 126.5 )
scale = Vector2( 0.333, 0.333 )
texture = ExtResource( 6 )

[node name="Column1" type="CenterContainer" parent="Dices/VBoxContainer/Row2"]
margin_left = 280.0
margin_right = 532.0
margin_bottom = 253.0
size_flags_horizontal = 3

[node name="Button" type="Button" parent="Dices/VBoxContainer/Row2/Column1"]
margin_right = 252.0
margin_bottom = 253.0
rect_min_size = Vector2( 252, 253 )
focus_mode = 0
size_flags_horizontal = 3
flat = true

[node name="icon" type="Sprite" parent="Dices/VBoxContainer/Row2/Column1/Button"]
position = Vector2( 126, 126.5 )
scale = Vector2( 0.333, 0.333 )
texture = ExtResource( 6 )

[node name="Column2" type="CenterContainer" parent="Dices/VBoxContainer/Row2"]
margin_left = 560.0
margin_right = 812.0
margin_bottom = 253.0
size_flags_horizontal = 3

[node name="Button" type="Button" parent="Dices/VBoxContainer/Row2/Column2"]
margin_right = 252.0
margin_bottom = 253.0
rect_min_size = Vector2( 252, 253 )
focus_mode = 0
size_flags_horizontal = 3
flat = true

[node name="icon" type="Sprite" parent="Dices/VBoxContainer/Row2/Column2/Button"]
position = Vector2( 126, 126.5 )
scale = Vector2( 0.333, 0.333 )
texture = ExtResource( 6 )

[node name="DiceSelectedGamePopup" parent="." instance=ExtResource( 3 )]

[node name="ModesPopUp" parent="." instance=ExtResource( 2 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 1920.0
margin_bottom = 1080.0

[node name="NormalModeGuidePopup" parent="." instance=ExtResource( 9 )]

[node name="ContinuePopup" parent="." instance=ExtResource( 10 )]
script = ExtResource( 11 )

[node name="FadeIn2" parent="ContinuePopup" instance=ExtResource( 14 )]
visible = false

[node name="FadeIn" parent="." instance=ExtResource( 14 )]
visible = false
[connection signal="pressed" from="Restart" to="." method="_on_Settings_pressed"]
[connection signal="pressed" from="Exit" to="." method="_on_Exit_pressed"]
[connection signal="pressed" from="Dices/VBoxContainer/Row0/Column0/Button" to="." method="_on_Button_pressed" binds= [ 0 ]]
[connection signal="pressed" from="Dices/VBoxContainer/Row0/Column1/Button" to="." method="_on_Button_pressed" binds= [ 1 ]]
[connection signal="pressed" from="Dices/VBoxContainer/Row0/Column2/Button" to="." method="_on_Button_pressed" binds= [ 2 ]]
[connection signal="pressed" from="Dices/VBoxContainer/Row1/Column0/Button" to="." method="_on_Button_pressed" binds= [ 3 ]]
[connection signal="pressed" from="Dices/VBoxContainer/Row1/Column1/Button" to="." method="_on_Button_pressed" binds= [ 4 ]]
[connection signal="pressed" from="Dices/VBoxContainer/Row1/Column2/Button" to="." method="_on_Button_pressed" binds= [ 5 ]]
[connection signal="pressed" from="Dices/VBoxContainer/Row2/Column0/Button" to="." method="_on_Button_pressed" binds= [ 6 ]]
[connection signal="pressed" from="Dices/VBoxContainer/Row2/Column1/Button" to="." method="_on_Button_pressed" binds= [ 7 ]]
[connection signal="pressed" from="Dices/VBoxContainer/Row2/Column2/Button" to="." method="_on_Button_pressed" binds= [ 8 ]]
[connection signal="hide" from="DiceSelectedGamePopup" to="." method="_on_DiceSelectedGamePopup_hide"]
[connection signal="hide" from="NormalModeGuidePopup" to="." method="_on_NormalModeGuidePopup_hide"]
[connection signal="fade_finished" from="ContinuePopup/FadeIn2" to="ContinuePopup" method="_on_FadeIn2_fade_finished"]
[connection signal="fade_finished" from="FadeIn" to="." method="_on_FadeIn_fade_finished"]
